# Parallel_Screen_Saver

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  README.md  bench_par.csv  bench_seq.csv
bench/: Anexo3_Bitacora2.md  bench_20250819_173500.csv  bench_20250819_174146.csv  bench_20250826_164337.csv  bench_20250830_210120.csv  bench_20250901_193452.csv  bench_summary.csv  bench_summary2.csv  benche_summary_table  test_20250819_174238.csv
example/: bench_matrix.sh  run_screensaver.sh
include/: ObjModel.h  TextRender.h
scripts/: analyze_bench  analyze_bench.cpp
src/: ObjModel.cpp  TextRender.cpp  main.cpp
